OLMIS-2928 Added batch approval endpoints (#43)
* OLMIS-2928 Added batch approval endpoints

The new batch endpoints are capable of retrieving, saving and
approving several requisitions at once. Those endpoints will
always attempt to process all the requisitions and the result
will contain information about all the requisitions that have
been successfully processed and anything that have resulted in
an error. The error messages returned are the exact same ones
as a regular endpoint would return, although they are bundled
and linked with requisition UUID. The new endpoints use a
simplified requisition and line items representation, containg
only fields that the requisition needs during approval.

* MW-397: Modified BatchRequisitionControllerIntegrationTest

+ use Collections.emptyList() instead of Lists.newArrayList()
+ validate messageKey in error list

* Response code and RAML fixes

* Further RAML fixes

* Fix Requisition controller test to properly verify ID missmatch
